--- a/site/index.html
+++ b/site/index.html
@@ -38,24 +38,25 @@
 <section id="intro" style="background:#fff">
 <h2>Introduction</h2>
 
-<p> Visualizations help us understand data in many different domains.
-Effective visualizations expose clearly the underlying meaning of data
-and help us navigate intricate and dense data sets.
+<p> Effective visualizations help us understand data and facilitate the
+navigation of intricate and dense data sets.
 
-<p> The web and its open standards present a fantastic framework to
-build visualization that reach many people. Most likely you have heard
-of <a href="http://d3js.org">D3</a>, a Javascript library that beautifully
-abstracts the low level interactions with the browser to help you create
-powerful visualizations.
+<p> The web and its open standards present a fantastic environment to build
+visualizations and reaching many people. You have probably heart of <a
+href="http://d3js.org">D3</a>, a Javascript library build by <a
+href="http://bost.ocks.org/mike/">Mike Bostock</a> that beautifully abstracts
+and exposes these technologies for the context of visualizations.
 
-<p> Perhaps you are less familiar with a project (based in D3) that helps
-visualize time series data using a visualization technique called Horizon
-Charts: <a href="http://github.com/square/cubism">Cubism</a>.
+<p> You are probably less familiar with <a
+href="http://github.com/square/cubism">Cubism</a>, a project from the same
+author, also based on D3, that helps exploring time series data using a
+visualization technique called Horizon Charts.
 
-<p> But Horizon Charts are not only useful in that domain. Biological datasets
-can greatly benefit from them. That's why we have modified the original library
-to work with Genomic Datasets. We call this new library DNAism.
+<p> Horizon Charts are not only useful in that domain. Biological datasets for
+example can greatly benefit from them. That's why we have modified the original
+library to work with Genomic Datasets. We call this new library DNAism.
 </section>
+
 
 
 
@@ -64,16 +65,17 @@ to work with Genomic Datasets. We call this new library DNAism.
 
 <h2>A case for Horizon Charts</h2>
 
-<p>
-Imagine we have a single variable we want to explore (stock data in this
+
+<p> Imagine we have a single variable we want to explore (stock data in this
 case). We could visualize it using a simple line chart (below).
 
-<p>
-This method is effective as soon as we have enough vertical space to
-encode the visuals. As we reduce it, we loose graphical perception. Now
-imagine having multiple variables that we want to render in a typical
-display. The method becomes
-<a href="http://www.perceptualedge.com/articles/visual_business_intelligence/time_on_the_horizon.pdf">impractical</a>.
+<p> This method is effective as soon as we have enough vertical space to encode
+the visuals. As we decrease it, we loose graphical perception. This problem
+increases as more more variables are introduced. The visualization method stops
+being
+<a
+href="http://www.perceptualedge.com/articles/visual_business_intelligence/time_on_the_horizon.pdf">effective</a>.
+Try it out by using the slider below:
 
 <div id="slider_container">
   <input id="slider" type="range" min="50" step="10" max="200" value="200"/>
@@ -83,20 +85,19 @@ display. The method becomes
 
 <div id="basic_line_chart"></div>
 
-<p>
-Under the right conditions, Horizon Charts can help us in this context. Below you
-can see the same datasets this time visually encoded using a Horizon Chart.
+<p> Horizon Charts can help us here. Below you can see the same dataset, this
+time visually encoded using a Horizon Chart.
 
-<p>
-Initially, we apply different colors to <span class="green">positive</span> and
-<span class="blue">negative</span> values and flip the
-negative ones over the baseline). The Horizon Chart is divided in horizontal bands
-(starting with 1). As we reduce vertical space, we add more bands and collapse them
-over the baseline. Bands are encoded using different color intensities.
-
-<p>
-Observe how the horizon chart is collapsed as the vertical space is reduced and we
-introduce more bands.
+<p> You can find the details of the process for converting a line chart into a
+horizon chart <a
+href="http://www.perceptualedge.com/articles/visual_business_intelligence/time_on_the_horizon.pdf">here</a>.
+We start by applying different colors to <span class="green">positive</span>
+and <span class="blue">negative</span> values and flip the negative ones over
+the baseline. We then divide the chart in horizontal bands (initially one
+single band is used).  As we reduce vertical space (try it by using the +/-
+buttons below), we create more bands and collapse them over the baseline. Different
+intensities are applied to the different bands in order to visually differentiate
+them.
 
 <script>
 
@@ -216,7 +217,7 @@ d3.json("data/unemployment.json", function(data, error) {
 <section>
 <h2>Requirements</h2>
 
-<p>In order to get the most out of DNAism you should be familiar with the
+<p>In order to get the most out of DNAism you should become familiar with the
 DOM, CSS, HTML and <a href="http://d3js.org">D3</a>. You can read
 more about the first three technologies
 <a href="https://developer.mozilla.org/en-US/docs/Web">here</a>.
@@ -249,12 +250,12 @@ that contain the code of the article you are reading.
 
 <p> We will start with a basic html document that loads DNAism and its
 only dependency (D3). In this basic document we also load the css styles
-for the different elements that DNAism will be inserting in the document
+for the different elements that DNAism will be creating in the document
 as we progress in the visualization.
 
-
 <p> At the end of our html document we add a script tag. Within it, we will
-be adding all the Javascript code with the instructions to create the visualization.
+be adding all the Javascript code that will contain all the instructions necessary
+to build the visualization.
 </section>
 
 
@@ -263,7 +264,8 @@ be adding all the Javascript code with the instructions to create the visualizat
 <h2>Creating a context</h2>
 
 <p> Our code will use the different DNAism components to create the visualization,
-starting with <span class="api">context()</span>.
+starting with <span class="api">context()</span>. We use it to tell the library
+what region of the genome we want to explore.
 
 <pre><code class="javascript">
 var context = dnaism.context()
@@ -273,32 +275,33 @@ var context = dnaism.context()
                .chrm('Chr17');
 </code></pre>
 
-<p> Here, we define the context of the region of the genome we are interested
-in exploring (Chr17:1100000-1200000). We do that by setting the
-<span class="api">chromosome()</span>
-and the <span class="api">start()</span> and
-<span class="api">stop()</span> position of the region of interest. In addition we
-have to specify the space we have to visualize the data, in pixels.
+<p> Here, we are interested in exploring (Chr17:1100000-1200000). We do that by
+setting the chromosome (using<span class="api">chrm()</span>) and the <span
+class="api">start()</span> and <span class="api">stop()</span> position of the
+region of interest. We also need to specify the space we have to
+visualize the data, in pixels.
 
 <p> We haven't rendered any web element yet, we are just telling DNAism what
 region we are interested on.
 </section>
 
 
+
+
 <section>
 <h2>Sources</h2>
 
-<p> Next we define a source. The interface of a source component defines a
-contract that context uses to requests data for a specific region. All the
-logic on how to retrieve the data is encapsulated in that component.
+<p> Next we define a source. This component encapsulates the logic on how
+to retrieve the actual data.
 
 <pre><code class="javascript">
 var source_bedfile = context.bedfile();
 </code></pre>
 
-<p> For this example we are using the <span class="api">bedfile()</span> source. This source's logic
-will request whole files to the server. Notice we haven't yet specified what
-files we want to load, we do that with the next component <span class="api">metric()</span>.
+<p> For this example we are using the <span class="api">bedfile()</span>
+source. This source's logic will request whole files to the server. Notice we
+haven't yet specified what files we want to load, we do that with the next
+component <span class="api">metric()</span>.
 </section>
 
 
@@ -307,18 +310,16 @@ files we want to load, we do that with the next component <span class="api">metr
 <section>
 <h2>Metrics</h2>
 
-<p> Now we can use the source we have just created to instantiate as many metrics as
-we want. Those metrics will point to a specific file (or sample). To start, we will
-create only one (sample 18277). We store the metric in an array so we can add
-more metrics later.
+<p> Now we can use the source to instantiate as many metrics as necessary.
+Those metrics will point to a specific file (or sample). To start, we will work
+on a single sample (sample 18277). We store the metric in a Javascript array so
+we can add more metrics (samples) later.
 
 <pre><code class="javascript">
-metric = [ source_bedfile.metric("18277.bed") ];
+metric = [ source_bedfile.metric("data/18277.bed") ];
 </code></pre>
 
-<p> We are telling the source we want a metric for a particular sample (18277.bed).
-
-<p> Now DNAism knows how to retrieve data for that particular sample. We can now
+<p> Now DNAism is ready to retrieve data for that particular sample. We can now
 start creating the visual elements.
 </section>
 
@@ -329,7 +330,8 @@ start creating the visual elements.
 <section>
 <h2>Creating the horizon chart</h2>
 
-<p> Bear with me here:
+<p> If you are not familiar with Javascript, functional programming and common
+D3 patterns, this chunk of code may look unreadable. Bear with me here:
 
 <pre><code class="javascript">
 d3.select("body").selectAll(".horizon")
@@ -340,16 +342,16 @@ d3.select("body").selectAll(".horizon")
     .format(d3.format(".2")));
 </code></pre>
 
-<p> This can be a daunting snippet for those not familiar with D3 and
-Javascript. It is a fundamental
-<a href="http://bost.ocks.org/mike/bar/">pattern</a> in D3 and you
-should master it if you want to use DNAism beyond basic visualizations.
+<p> It is a fundamental <a href="http://bost.ocks.org/mike/bar/">pattern</a> in
+D3 and you should master it if you want to use DNAism beyond the basics.
 
 <p> What we are doing is selecting the html element where we will be drawing
-the horizon chart (or charts if there is more than one sample we are working
-on). We also associate metrics to that selection and apply the class horizon
-to it. Finally D3 calls <span class="api">context.horizon()</span> to create
-the necessary visual elements for the horizon chart we want to create.
+the horizon chart on (or charts if there is more than one sample we are working
+on). We also associate metrics (the data) to that selection and apply the
+necessary css styles to it (horizon class). Finally, D3 calls <span
+class="api">context.horizon()</span> to create the necessary visual elements
+for the metric(sample) we want to create. Remember, in this case we have only
+one sample.
 
 <p> And here you have the result:
 
@@ -375,14 +377,15 @@ d3.select("#single_horizon").selectAll(".horizon")
     .format(d3.format(".2")));
 </script>
 
-<p> Now we can explore the read depth for that regions in more samples,
-just by adding them to the metrics array:
+<p> Notice how abnormal regions are easily spot (high and low coverage).
+Now we can explore the read depth for more samples, just by adding them to
+the metrics array:
 
 <pre><code class="javascript">
 var metrics = [
-  source_bedfile.metric("18277.bed"),
-  source_bedfile.metric("19466.bed"),
-  source_bedfile.metric("23138.bed"),
+  source_bedfile.metric("data/18277.bed"),
+  source_bedfile.metric("data/19466.bed"),
+  source_bedfile.metric("data/23138.bed"),
 ];
 </code></pre>
 
@@ -412,7 +415,7 @@ d3.select("#three_samples").selectAll(".horizon")
     .format(d3.format(".2")));
 </script>
 
-<p> We can use the axis component now to help us determine what part
+<p> We can use the <span class="api">axis()</span> component now to help us determine what part
 of the genome we are exploring:
 
 <div id="with_axis"> </div>
@@ -449,8 +452,9 @@ d3.select("#with_axis").selectAll(".horizon")
 
 
 
-<p> And finally, we can add a rule to help us compare the data value for a specific
-location across different samples:
+<p> And finally, we can add a <span class="api">rule()</span> to help us
+compare the data value, for a specific location, across the different samples. Try
+hovering the mouse over the chart:
 
 <div id="with_rule"> </div>
 
@@ -501,7 +505,9 @@ d3.select("#with_rule").selectAll(".axis")
     .data(["top", "bottom"])
   .enter().append("div")
     .attr("class", function(d) { return d + " axis"; })
-    .each(function(d) { d3.select(this).call(context.axis().ticks(12).orient(d)); });
+    .each(function(d) {
+      d3.select(this).call(context.axis().ticks(12).orient(d));
+    });
 
 d3.select("body").append("div")
     .attr("class", "rule")
@@ -528,4 +534,3 @@ d3.select("#with_rule").selectAll(".horizon")
 
 <script src="highlight/highlight.pack.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
-
