--- a/example/depth/index.template.html
+++ b/example/depth/index.template.html
@@ -1,150 +1,50 @@
-
 <!DOCTYPE html>
+<!-- vim: set ts=2 sw=2 ft=html foldmethod=indent: -->
 <meta charset="utf-8">
-<style>
 
-body {
-  font-family: "Helvetica Neue", Helvetica, sans-serif;
-  margin: 30px auto;
-  width: 1280px;
-  position: relative;
-}
+<link rel="stylesheet" href="style.css?v=1.0">
 
-header {
-  padding: 6px 0;
-}
-
-.group {
-  margin-bottom: 1em;
-}
-
-.axis {
-  font: 10px sans-serif;
-  position: fixed;
-  pointer-events: none;
-  z-index: 2;
-}
-
-.axis text {
-  -webkit-transition: fill-opacity 250ms linear;
-}
-
-.axis path {
-  display: none;
-}
-
-.axis line {
-  stroke: #000;
-  shape-rendering: crispEdges;
-}
-
-.axis.top {
-  background-image: linear-gradient(top, #fff 0%, rgba(255,255,255,0) 100%);
-  background-image: -o-linear-gradient(top, #fff 0%, rgba(255,255,255,0) 100%);
-  background-image: -moz-linear-gradient(top, #fff 0%, rgba(255,255,255,0) 100%);
-  background-image: -webkit-linear-gradient(top, #fff 0%, rgba(255,255,255,0) 100%);
-  background-image: -ms-linear-gradient(top, #fff 0%, rgba(255,255,255,0) 100%);
-  top: 0px;
-  padding: 0 0 24px 0;
-}
-
-.axis.bottom {
-  background-image: linear-gradient(bottom, #fff 0%, rgba(255,255,255,0) 100%);
-  background-image: -o-linear-gradient(bottom, #fff 0%, rgba(255,255,255,0) 100%);
-  background-image: -moz-linear-gradient(bottom, #fff 0%, rgba(255,255,255,0) 100%);
-  background-image: -webkit-linear-gradient(bottom, #fff 0%, rgba(255,255,255,0) 100%);
-  background-image: -ms-linear-gradient(bottom, #fff 0%, rgba(255,255,255,0) 100%);
-  bottom: 0px;
-  padding: 24px 0 0 0;
-}
-
-.horizon {
-  border-bottom: solid 1px #000;
-  overflow: hidden;
-  position: relative;
-}
-
-.horizon {
-  border-top: solid 1px #000;
-  border-bottom: solid 1px #000;
-}
-
-.horizon + .horizon {
-  border-top: none;
-}
-
-.horizon canvas {
-  display: block;
-}
-
-.horizon .title,
-.horizon .value {
-  bottom: 0;
-  line-height: 30px;
-  margin: 0 6px;
-  position: absolute;
-  text-shadow: 0 1px 0 rgba(255,255,255,.5);
-  white-space: nowrap;
-}
-
-.horizon .title {
-  left: 0;
-}
-
-.horizon .value {
-  right: 0;
-}
-
-.line {
-  background: #000;
-  z-index: 2;
-}
-
-</style>
-
-<script src="http://d3js.org/d3.v2.js?2.9.1"></script>
-<!-- <script src="http://square.github.com/cubism/cubism.v1.js?1.0.0"></script> -->
+<script src="d3.js"></script>
 <script src="dnaism.v1.js"></script>
+
 <body id="demo">
+
 <script>
+  var context = dnaism.context()
+                 .start({{start}})
+                 .stop({{stop}})
+                 .size({{size}})
+                 .chrm('{{chrm}}')
+                 .step({{step}});
 
-var context = dnaism.context()
-               .start({{start}})
-               .stop({{stop}})
-               .size({{size}})
-               .chrm('{{chrm}}')
-               .step({{step}});
-
-d3.select("#demo").selectAll(".axis")
-    .data(["top", "bottom"])
-  .enter().append("div")
-    .attr("class", function(d) { return d + " axis"; })
-    .each(function(d) { d3.select(this).call(context.axis().ticks(12).orient(d)); });
-
-
-d3.select("body").append("div")
-    .attr("class", "rule")
-    .call(context.rule());
-
-var source_bedfile = context.bedfile();
-
-var metrics = [
-    {%- for m in metrics %}
-    source_bedfile.metric("{{m}}"),
-    {%- endfor %}
-];
+  d3.select("#demo").selectAll(".axis")
+      .data(["top", "bottom"])
+    .enter().append("div")
+      .attr("class", function(d) { return d + " axis"; })
+      .each(function(d) { d3.select(this).call(context.axis().ticks(12).orient(d)); });
 
 
-d3.select("body").selectAll(".horizon")
-    .data(metrics)
-  .enter().insert("div", ".bottom")
-    .attr("class", "horizon")
-  .call(context.horizon()
-    .format(d3.format(".2")));
+  d3.select("body").append("div")
+      .attr("class", "rule")
+      .call(context.rule());
 
-context.on("focus", function(i) {
-  d3.selectAll(".value").style("right", i == null ? null : context.size() - i + "px");
+  var source_bedfile = context.bedfile();
+
+  var metrics = [
+      {%- for m in metrics %}
+      source_bedfile.metric("{{m}}"),
+      {%- endfor %}
+  ];
+
+
+  d3.select("body").selectAll(".horizon")
+      .data(metrics)
+    .enter().insert("div", ".bottom")
+      .attr("class", "horizon")
+    .call(context.horizon()
+      .format(d3.format(".2")));
+
+  context.on("focus", function(i) {
+    d3.selectAll(".value").style("right", i == null ? null : context.size() - i + "px");
 });
-
 </script>
-
